secure wrapper to implement